# seng440code

./: .clang-tidy  CMakeCache.txt  CMakeLists.txt  Default.sqlite  Makefile  cc_int_1.lst  cc_int_adr.lst  cc_int_vec1.lst  cc_thread.lst  cmake_install.cmake  colour_convert.c  colour_convert.s  colour_convert1  colour_convert2  colour_convert_int  colour_convert_int.1.plist  colour_convert_int.ast  colour_convert_int.c  colour_convert_int.opt.yaml  colour_convert_int.plist  colour_convert_int_opt.yaml  colour_convert_int_vec  colour_convert_int_vec.c  colour_convert_thread.c  colour_convert_thread.opt.yaml  colour_convertout.yaml  compile_commands.json  compile_commands1.json  config.sqlite  maachinecode.c  optout  output_YCC_int.ppm  package-lock.json  startercode.c  store_time.log.2023-08-07_14  tidy_fixes.yaml
.ccls-cache/@@home@birdy@seng440code/: @home@birdy@pico@pico-sdk@src@boards@include@boards@pico.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_base@include@pico.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_base@include@pico@assert.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_base@include@pico@config.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_base@include@pico@error.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_base@include@pico@types.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_sync@critical_section.c.blob  @home@birdy@pico@pico-sdk@src@common@pico_sync@include@pico@critical_section.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_sync@include@pico@lock_core.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_sync@include@pico@mutex.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_sync@include@pico@sem.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_sync@include@pico@sync.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_sync@lock_core.c.blob  @home@birdy@pico@pico-sdk@src@common@pico_sync@mutex.c.blob  @home@birdy@pico@pico-sdk@src@common@pico_sync@sem.c.blob  @home@birdy@pico@pico-sdk@src@common@pico_time@include@pico@time.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_time@include@pico@timeout_helper.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_time@time.c.blob  @home@birdy@pico@pico-sdk@src@common@pico_time@timeout_helper.c.blob  @home@birdy@pico@pico-sdk@src@common@pico_util@datetime.c.blob  @home@birdy@pico@pico-sdk@src@common@pico_util@include@pico@util@datetime.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_util@include@pico@util@pheap.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_util@include@pico@util@queue.h.blob  @home@birdy@pico@pico-sdk@src@common@pico_util@pheap.c.blob  @home@birdy@pico@pico-sdk@src@common@pico_util@queue.c.blob  @home@birdy@pico@pico-sdk@src@rp2040@hardware_regs@include@hardware@platform_defs.h.blob  @home@birdy@pico@pico-sdk@src@rp2040@hardware_regs@include@hardware@regs@addressmap.h.blob  (+124 more)
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Release/: CMakeCache.txt
Release/src/: colour_convert  (+1 more)
clang_test/: colour_convert_int  colour_convert_int.plist
reports/: colour_convert.c_clang-tidy_02d3d11bf9947cb7d7580ba6269bcd49.plist  colour_convert.c_clangsa_55e3b2d26aaad64b893206c4cdf02837.plist  colour_convert_int.c_clang-tidy_c0d281cf7c573cbf2ba0342fee4b44ae.plist  colour_convert_int.c_clang-tidy_d141a5213a8370caf25fdb8fecd3f0c7.plist  colour_convert_int.c_clangsa_c0d281cf7c573cbf2ba0342fee4b44ae.plist  colour_convert_int.c_clangsa_d141a5213a8370caf25fdb8fecd3f0c7.plist  compile_cmd.json  compiler_info.json  metadata.json  unique_compile_commands.json
reports_html/: colour_convert.c_clang-tidy_02d3d11bf9947cb7d7580ba6269bcd49.plist.html  colour_convert.c_clangsa_55e3b2d26aaad64b893206c4cdf02837.plist.html  colour_convert_int.c_clang-tidy_c0d281cf7c573cbf2ba0342fee4b44ae.plist.html  colour_convert_int.c_clang-tidy_d141a5213a8370caf25fdb8fecd3f0c7.plist.html  colour_convert_int.c_clangsa_c0d281cf7c573cbf2ba0342fee4b44ae.plist.html  colour_convert_int.c_clangsa_d141a5213a8370caf25fdb8fecd3f0c7.plist.html  index.html  statistics.html
(+66 files in other folders)
